--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p class="bio">
                 Passionate software developer who loves transforming ideas into digital solutions. 
                 Skilled at problem-solving and building user-friendly applications. Enjoys collaborating with teams to create impactful tech. 
-                When not coding, you’ll find me sipping coffee or gaming!.
+                When not coding, you’ll find me sipping chai or gaming!.
             </p>
             <div class="social-icons">
                 <a href="https://x.com/HarkarePrajwal"><i class="fab fa-twitter"></i></a>
