--- a/index.html
+++ b/index.html
@@ -8,21 +8,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="card" >
-        <img src="profile1.jpg" alt="Profile Picture" class="profile-img">
-        <div class="content">
-            <h2>Prajwal Harkare</h2>
-            <h3>Software Developer</h3>
-            <p class="bio">
-                Passionate software developer who loves transforming ideas into digital solutions. 
-                Skilled at problem-solving and building user-friendly applications. Enjoys collaborating with teams to create impactful tech. 
-                When not coding, you’ll find me sipping chai or gaming!.
-            </p>
-            <div class="social-icons">
-                <a href="https://x.com/HarkarePrajwal"><i class="fab fa-twitter"></i></a>
-                <a href="www.linkedin.com/in/prajwal-harkare"><i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/Prajwal1881/"><i class="fab fa-github"></i></a>
-                <a href="https://www.instagram.com/prajwal_harkare/"><i class="fab fa-instagram"></i></a>
+    <div class="container">
+        <div class="card">
+            <img src="profile1.jpg" alt="Profile Picture" class="profile-img">
+            <div class="content">
+                <h2>Prajwal Harkare</h2>
+                <h3>Software Developer</h3>
+                <p class="bio">
+                    Passionate software developer who loves transforming ideas into digital solutions. 
+                    Skilled at problem-solving and building user-friendly applications. Enjoys collaborating with teams to create impactful tech. 
+                    When not coding, you’ll find me sipping coffee or gaming!
+                </p>
+                <div class="social-icons">
+                    <a href="https://x.com/HarkarePrajwal"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.linkedin.com/in/prajwal-harkare"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/Prajwal1881/"><i class="fab fa-github"></i></a>
+                    <a href="https://www.instagram.com/prajwal_harkare/"><i class="fab fa-instagram"></i></a>
+                </div>
             </div>
         </div>
     </div>
