--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="card" >
+      <div class="profilepic">
         <img src="profile1.jpg" alt="Profile Picture" class="profile-img">
+      </div>
         <div class="content">
             <h2>Prajwal Harkare</h2>
             <h3>Software Developer</h3>
