--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </p>
                 <div class="social-icons">
                     <a href="https://x.com/HarkarePrajwal"><i class="fab fa-twitter"></i></a>
-                    <a href="www.linkedin.com/in/prajwal-harkare"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/prajwal-harkare/"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/Prajwal1881/"><i class="fab fa-github"></i></a>
                     <a href="https://www.instagram.com/prajwal_harkare/"><i class="fab fa-instagram"></i></a>
                 </div>
